--- a/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Editor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Transactions/Components/Editor.razor
@@ -33,6 +33,8 @@
                                   Margin="Margin.Dense"
                                   AdornmentIcon="@Icons.Material.Filled.Person"
                                   Adornment="Adornment.End"
+                                  Clearable="true"
+                                  OnClearButtonClick="OnCustomerNationalIdCleared"
                                   Variant="Variant.Outlined" />
                 </MudItem>
                 <MudItem xs="12" md="4">
@@ -156,7 +158,7 @@
                         </MudText>
                         <MudGrid>
                             <MudItem xs="12" md="6" lg="6">
-                                <MudMenu @bind-Open="_isCreditMenuOpen" ActivationEvent="@MouseEvent.RightClick" Class="w-100">
+                                <MudMenu @bind-Open="_isCreditMenuOpen" ActivationEvent="@MouseEvent.LeftClick" Class="w-100">
                                     <ActivatorContent>
                                         <MudNumericField Value="Model.Credit"
                                                          ValueChanged="OnCreditChanged"
@@ -169,7 +171,7 @@
                                                          Margin="Margin.Dense"
                                                          Variant="Variant.Outlined"
                                                          Adornment="Adornment.End"
-                                                         AdornmentIcon="@Icons.Material.Filled.UnfoldMore"
+                                                         AdornmentText="@_creditAdornmentText"
                                                          OnAdornmentClick="() => _isCreditMenuOpen = true" />
                                     </ActivatorContent>
                                     <ChildContent>
@@ -213,7 +215,7 @@
                         </MudText>
                         <MudGrid>
                             <MudItem xs="12" md="6" lg="6">
-                                <MudMenu @bind-Open="_isDebitMenuOpen" ActivationEvent="@MouseEvent.RightClick" Class="w-100">
+                                <MudMenu @bind-Open="_isDebitMenuOpen" ActivationEvent="@MouseEvent.LeftClick" Class="w-100">
                                     <ActivatorContent>
                                         <MudNumericField Value="Model.Debit"
                                                          ValueChanged="OnDebitChanged"
@@ -226,7 +228,7 @@
                                                          Margin="Margin.Dense"
                                                          Variant="Variant.Outlined"
                                                          Adornment="Adornment.End"
-                                                         AdornmentIcon="@Icons.Material.Filled.UnfoldMore"
+                                                         AdornmentText="@_debitAdornmentText"
                                                          OnAdornmentClick="() => _isDebitMenuOpen = true" />
                                     </ActivatorContent>
                                     <ChildContent>
