--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/DiscountList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/DiscountList.razor
@@ -20,8 +20,8 @@
             <MudTd DataLabel="مبلغ" Class="p-1">
                 <MudNumericField @bind-Value="context.Amount"
                                  For="@(() => context.Amount)"
-                                 HelperTextOnFocus="true"
                                  HideSpinButtons="true"
+                                 Format="#,##0.##"
                                  Immediate="true"
                                  Label="@(context.GetDisplayName(() => context.Amount))"
                                  Margin="Margin.Dense"
