--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/PaymentList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/PaymentList.razor
@@ -1,4 +1,5 @@
-﻿@using GoldEx.Shared.DTOs.PaymentMethods
+﻿@using GoldEx.Client.Helpers
+@using GoldEx.Shared.DTOs.PaymentMethods
 @inherits GoldExComponentBase
 
 <div>
@@ -12,27 +13,56 @@
     </MudStack>
 
     <MudTable Items="@Items" Elevation="0">
-        <HeaderContent>
-            <MudTh></MudTh>
-            <MudTh></MudTh>
-            <MudTh></MudTh>
-            <MudTh></MudTh>
-            <MudTh></MudTh>
-            <MudTh></MudTh>
-        </HeaderContent>
         <RowTemplate>
             <MudTd DataLabel="مبلغ" Class="p-1">
-                <MudNumericField @bind-Value="context.Amount"
-                                 For="@(() => context.Amount)"
-                                 HelperTextOnFocus="true"
-                                 HideSpinButtons="true"
-                                 Immediate="true"
-                                 Label="@(context.GetDisplayName(() => context.Amount))"
-                                 Margin="Margin.Dense"
-                                 Adornment="Adornment.End"
-                                 AdornmentIcon="@Icons.Material.Filled.MonetizationOn"
-                                 Variant="Variant.Outlined" />
+                <MudMenu @bind-Open="context.AmountMenuOpen" ActivationEvent="@MouseEvent.RightClick" Class="w-100">
+                    <ActivatorContent>
+                        <MudNumericField Value="context.Amount"
+                                         ValueChanged="amount => OnAmountChanged(amount, context)"
+                                         T="decimal"
+                                         HideSpinButtons="true"
+                                         Format="#,##0.##"
+                                         Immediate="true"
+                                         For="@(() => context.Amount)"
+                                         Label="@(context.GetDisplayName(() => context.Amount))"
+                                         Margin="Margin.Dense"
+                                         Variant="Variant.Outlined"
+                                         Adornment="Adornment.End"
+                                         AdornmentText="@context.AmountAdornmentText"
+                                         OnAdornmentClick="() => context.AmountMenuOpen = true" />
+                    </ActivatorContent>
+                    <ChildContent>
+                        @foreach (var item in PriceUnits)
+                        {
+                            <MudMenuItem OnClick="() => SelectPriceUnit(item, context)">
+                                <div style="display: flex; align-items: center; gap: 8px;">
+                                    @if (item.HasIcon)
+                                    {
+                                        <MudAvatar Size="Size.Small" Color="Color.Primary">
+                                            <MudImage Src="@(ApiUrls.Icons.Get(IconType.PriceUnit, item.Id))"></MudImage>
+                                        </MudAvatar>
+                                    }
+                                    @item.Title
+                                </div>
+                            </MudMenuItem>
+                        }
+                    </ChildContent>
+                </MudMenu>
             </MudTd>
+            @if (context.PriceUnit != PriceUnit)
+            {
+                <MudTd DataLabel="@context.ExchangeRateLabel">
+                    <MudNumericField For="@(() => context.ExchangeRate)"
+                                     Format="#,##0.########"
+                                     Immediate="true"
+                                     Label="@context.ExchangeRateLabel"
+                                     Margin="Margin.Dense"
+                                     T="decimal?"
+                                     @bind-Value="context.ExchangeRate"
+                                     HideSpinButtons="true"
+                                     Variant="Variant.Outlined" />
+                </MudTd>
+            }
             <MudTd DataLabel="روش پرداخت" Class="p-1">
                 <MudSelect @bind-Value="@context.PaymentMethod"
                            T="GetPaymentMethodResponse?"
@@ -89,7 +119,9 @@
         </NoRecordsContent>
     </MudTable>
 
-    <div>
-        جمع کل پرداختی ها: @Items.Sum(x => x.Amount).ToString("C0")
+    <div class="d-flex flex-column">
+        <div>
+            جمع کل پرداختی ها: @Items.Sum(x => x.TotalAmount).ToCurrencyFormat() @PriceUnit.Title
+        </div>
     </div>
 </div>
