--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
@@ -1,4 +1,5 @@
-﻿@using GoldEx.Client.Pages.Invoices.ViewModels
+﻿@using GoldEx.Client.Helpers
+@using GoldEx.Client.Pages.Invoices.ViewModels
 @using GoldEx.Shared.DTOs.PriceUnits
 @inherits GoldExComponentBase
 
@@ -220,7 +221,7 @@
                     <MudTd DataLabel="عیار">@context.Product.CaratType.GetDisplayName()</MudTd>
                     <MudTd DataLabel="وزن">@context.Product.Weight?.ToString("G29") گرم</MudTd>
                     <MudTd DataLabel="تعداد">@context.Quantity</MudTd>
-                    <MudTd DataLabel="ارزش کل">@context.FinalAmount.ToString("C0")</MudTd>
+                    <MudTd DataLabel="ارزش کل">@context.TotalAmount.ToCurrencyFormat() @Model.InvoicePriceUnit?.Title</MudTd>
                     <MudTd DataLabel="عملیات">
                         <div class="d-flex gap-2">
                             <MudTooltip Text="چاپ بارکد">
@@ -257,22 +258,22 @@
                     <MudText Typo="Typo.body2">ارزش تمام شده اقلام</MudText>
                 </MudItem>
                 <MudItem xs="6" md="3" lg="2">
-                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalItemsAmount.ToString("C0")</MudText>
+                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalItemsAmount.ToCurrencyFormat() @Model.InvoicePriceUnit?.Title</MudText>
                 </MudItem>
 
                 <MudItem xs="6" md="3" lg="2" Class="d-flex align-center">
-                    <MudText Typo="Typo.body2">تخفیف</MudText>
                     <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Discount" Color="Color.Success" OnClick="OnDiscountMenuToggled"></MudIconButton>
+                    <MudText Typo="Typo.body2">تخفیف</MudText>
                     <MudPopover Open="@_discountMenuOpen" Fixed="true" Class="px-4 pt-4" AnchorOrigin="Origin.TopCenter" TransformOrigin="Origin.BottomCenter">
                         <div class="d-flex flex-column">
-                            <DiscountList Items="@Model.InvoiceDiscounts" />
+                            <DiscountList Items="@Model.InvoiceDiscounts"/>
                             <MudButton OnClick="@OnDiscountMenuToggled" Class="ml-auto mr-n3 mb-1"
                                        Color="Color.Error" StartIcon="@Icons.Material.Filled.Close">بستن</MudButton>
                         </div>
                     </MudPopover>
                 </MudItem>
                 <MudItem xs="6" md="3" lg="2">
-                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalDiscountsAmount.ToString("C0")</MudText>
+                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalDiscountsAmount.ToCurrencyFormat() @Model.InvoicePriceUnit?.Title</MudText>
                 </MudItem>
 
                 <MudItem xs="6" md="3" lg="2" Class="d-flex align-center">
@@ -287,36 +288,36 @@
                     </MudPopover>
                 </MudItem>
                 <MudItem xs="6" md="3" lg="2">
-                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalExtraCostsAmount.ToString("C0")</MudText>
+                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalExtraCostsAmount.ToCurrencyFormat() @Model.InvoicePriceUnit?.Title</MudText>
                 </MudItem>
 
                 <MudItem xs="6" md="3" lg="2">
                     <MudText Typo="Typo.body2">مبلغ نهایی فاکتور</MudText>
                 </MudItem>
                 <MudItem xs="6" md="3" lg="2">
-                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalInvoiceAmount.ToString("C0")</MudText>
+                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalInvoiceAmount.ToCurrencyFormat() @Model.InvoicePriceUnit?.Title</MudText>
                 </MudItem>
 
                 <MudItem xs="6" md="3" lg="2" Class="d-flex align-center">
-                    <MudText Typo="Typo.body2">جمع پرداختی</MudText>
                     <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Payments" Color="Color.Success" OnClick="OnPaymentsMenuToggled"></MudIconButton>
+                    <MudText Typo="Typo.body2">جمع پرداختی</MudText>
                     <MudPopover Open="@_paymentsMenuOpen" Fixed="true" Class="px-4 pt-4" AnchorOrigin="Origin.TopCenter" TransformOrigin="Origin.BottomCenter">
                         <div class="d-flex flex-column">
-                            <PaymentList Items="Model.InvoicePayments" />
+                            <PaymentList Items="Model.InvoicePayments" PriceUnit="Model.InvoicePriceUnit" PriceUnits="_priceUnits"/>
                             <MudButton OnClick="@OnPaymentsMenuToggled" Class="ml-auto mr-n3 mb-1"
                                        Color="Color.Error" StartIcon="@Icons.Material.Filled.Close">بستن</MudButton>
                         </div>
                     </MudPopover>
                 </MudItem>
                 <MudItem xs="6" md="3" lg="2">
-                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalPaymentsAmount.ToString("C0")</MudText>
+                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.TotalPaymentsAmount.ToCurrencyFormat() @Model.InvoicePriceUnit?.Title</MudText>
                 </MudItem>
 
                 <MudItem xs="6" md="3" lg="2">
                     <MudText Typo="Typo.body2">مانده حساب</MudText>
                 </MudItem>
                 <MudItem xs="6" md="3" lg="2">
-                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.RemainingAmount.ToString("C0")</MudText>
+                    <MudText Typo="Typo.body2" Align="Align.Right">@Model.RemainingAmount.ToCurrencyFormat() @Model.InvoicePriceUnit?.Title</MudText>
                 </MudItem>
             </MudGrid>
         }
